--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "js-questionnaire",
   "version": "1.0.2",
-  "description": "",
+  "description": "A fun JS questionnaire",
   "main": "index.js",
   "type": "module",
+  "homepage": "https://github.com/Oladejiraji/js-questionnaire#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Oladejiraji/js-questionnaire.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +16,7 @@
     "cli",
     "node"
   ],
-  "author": "",
+  "author": "Raji Oladeji <rajioladeji2@gmail.com> (https://oladeji.app)",
   "bin": "./index.js",
   "license": "ISC",
   "dependencies": {
